# glatter

./: .cirrus.yml  CMakeLists.txt  README  README.md  README.rst  TEST_RESULTS.md  eglgears.c  glatter.c  glatter.c_gen  glatter.h  glatter.h_gen  glatter.py  glatter_config.h  glatter_system_headers.h  wglgears.c
.github/workflows/: main.yaml
example/glatter/: wglgears.c
include/GL/: gl.h  glext.h  glx.h  glxext.h  wglext.h
include/glatter/: glatter.h  glatter.h_gen  glatter.py  glatter_atomic.h  glatter_config.h  glatter_config_choices.h  glatter_config_internal.h  glatter_config_user.h  glatter_config_validate.h  glatter_def.h  glatter_masprintf.h  glatter_once.h  glatter_platform_headers.h  glatter_qt_compat.h  glatter_solo.h  glatter_system_headers.h  glatter_threads_internal.h  gltr_once.h
include/glatter/headers/khronos_gl/: glext.h
src/glatter/: glatter.c
test/glatter/: glxgears.c  wglgears.c
tests/: main.cpp  test_build.py  test_glatter_log_null.c  test_linux_versioned_loader.cpp  thread_owner_call.cpp  thread_owner_init.cpp
tests/cmake/: CMakeLists.txt  c_program.c  context_key_test.c  egl_stubs.c  header_only_helper.cpp  header_only_main.cpp  header_only_solo_helper.cpp  header_only_solo_main.cpp  static_link_main.cpp  wgl_headers.c
tests/include/: winapifamily.h  windows.h
tests/include/EGL/: egl.h  eglext.h  eglplatform.h
tests/include/GLES/: glplatform.h
tests/include/GLES2/: gl2.h  gl2ext.h  gl2platform.h
tests/include/KHR/: khrplatform.h
tools/glatter/: glatter.py
